@@ -1,7 +1,7 @@
 {
    "abstract" : "Math::BigInt::Calc with some XS for more speed",
    "author" : [
-      "Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>, Tels <nospam-abuse@bloodgate.com>"
+      "Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>, Peter John Acklam <pjacklam@gmail.com>"
    ],
    "dynamic_config" : 1,
    "generated_by" : "ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005",
@@ -33,14 +33,14 @@
       },
       "runtime" : {
          "requires" : {
-            "Math::BigInt" : "1.999702",
-            "Math::BigInt::Calc" : "1.999702",
+            "Math::BigInt" : "1.999703",
+            "Math::BigInt::Calc" : "1.999703",
             "XSLoader" : "0",
             "perl" : "5.006"
          }
       }
    },
    "release_status" : "stable",
-   "version" : "0.33",
+   "version" : "0.34",
    "x_serialization_backend" : "JSON::PP version 2.27300"
 }
