@@ -1,7 +1,7 @@
 ---
 abstract: 'Math::BigInt::Calc with some XS for more speed'
 author:
-  - 'Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>, Tels <nospam-abuse@bloodgate.com>'
+  - 'Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>, Peter John Acklam <pjacklam@gmail.com>'
 build_requires:
   ExtUtils::MakeMaker: '6.59'
   Test::More: '0.62'
@@ -19,9 +19,9 @@ no_index:
     - t
     - inc
 requires:
-  Math::BigInt: '1.999702'
-  Math::BigInt::Calc: '1.999702'
+  Math::BigInt: '1.999703'
+  Math::BigInt::Calc: '1.999703'
   XSLoader: '0'
   perl: '5.006'
-version: '0.33'
+version: '0.34'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
