@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 
 use strict;
-use Test::More tests => 3669 + 6;
+use Test::More tests => 3701 + 6;
 
 use Math::BigInt lib => 'FastCalc';
 
